# ackermann_vehicle

./: README.md
ackermann_vehicle_description/launch/: ackermann_vehicle.launch  ackermann_vehicle_rviz.launch
ackermann_vehicle_description/materials/scripts/: tag.material
ackermann_vehicle_description/meshes/: april_tag.dae  april_tag2.dae
ackermann_vehicle_description/urdf/: em_3905.urdf.xacro  ugv_vehicle.urdf  ugv_vehicle.xacro  ugv_vehicle_static.xacro
ackermann_vehicle_gazebo/: CMakeLists.txt
ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch
ackermann_vehicle_gazebo/src/: ackermann_traj.cpp  ackermann_traj_org.cpp
ackermann_vehicle_gazebo/world/: empty.world
